clusters/offsite/networking/gateway-api/prowlarr.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: default
spec:
  parentRefs:
    - name: cluster-gateway
  hostnames:
    - "prowlarr.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: prowlarr
  namespace: default
  labels:
    kubernetes.io/service-name: prowlarr
addressType: IPv4
ports:
  - name: ""
    port: 9696
    protocol: TCP
endpoints:
  - addresses:
      - "192.168.2.11"
